# nba-stats

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/: deploy-doc.yml
.github/workflows/: deploy-doc.yml  lint_test.yml  linter.yml
scraping/: get_games_boxscore.py  get_games_schedule.py
scraping/tests/: test_get_games_boxscore.py
scrapping/: get_games_boxscore.py  get_games_schedule.py
transform/nba_dwh/: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml
transform/nba_dwh/local_source/: game_boxscore_1999.parquet  game_boxscore_2000.parquet  game_boxscore_2001.parquet  game_boxscore_2002.parquet  game_boxscore_2003.parquet  game_boxscore_2004.parquet  game_boxscore_2005.parquet  game_boxscore_2006.parquet  game_boxscore_2007.parquet  game_boxscore_2008.parquet  game_boxscore_2009.parquet  game_boxscore_2010.parquet  game_boxscore_2011.parquet  game_boxscore_2012.parquet  game_boxscore_2013.parquet  game_boxscore_2014.parquet  game_boxscore_2015.parquet  game_boxscore_2016.parquet  game_boxscore_2017.parquet  game_boxscore_2018.parquet  game_boxscore_2019.parquet  game_boxscore_2020.parquet  game_boxscore_2021.parquet  game_boxscore_2022.parquet  game_boxscore_2023.parquet  game_boxscore_2024.parquet  game_schedule_1999.parquet  game_schedule_2000.parquet  game_schedule_2001.parquet  game_schedule_2002.parquet  game_schedule_2003.parquet  game_schedule_2004.parquet  game_schedule_2005.parquet  game_schedule_2006.parquet  game_schedule_2007.parquet  (+18 more)
(+14 files in other folders)
