[project]
name = "nba-stats"
version = "0.1.0"
description = " Data project using NBA stats. Model a local datawarehouse using dbt-duckdb."
readme = "README.md"
authors = [
    { name = "pdgarden"}
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "dbt-core>=1.9.1",
    "dbt-duckdb>=1.9.1",
    "duckcli>=0.2.1",
    "loguru>=0.7.3",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.5",
    "tqdm>=4.67.1",
]


[tool.ruff]
line-length = 120
target-version = "py311"
src = ["scraping"]

[tool.ruff.lint]
preview = true
extend-select = [
    'E', 'F', 'W', 'C90', 'A', 'ANN', 'S', 'B', 'PT', 'Q', 'RSE', 'SIM', 'ARG', 'PTH', 'PD',
    'TRY', 'FLY', 'NPY', 'PLC', 'PLE', 'PLW', 'I',
    ]


[tool.sqlfmt]
dialect = "polyglot"
line_length = 120
exclude=[
    "./transform/nba_dwh/target/**/*",
    "./transform/nba_dwh/dbt_packages/**/*",
    "./venv/**/*",
    "./.venv/**/*",
    ]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.9.2",
    "shandy-sqlfmt>=0.24.0",
]
